Version 1.5.2:

* Fixed minor rendering bug in view single file mode.

Version 1.5.1:

* Fixed bug where viewing a file in a popup didn't work for those diffs
  which contained empty lines.

Version 1.5.0:

* Just some documentation changes.  No code changes from 1.5.0b3.

Version 1.5.0b3:

* Comments are now entered via a popup window.  This means the
  relatively heavy operation of loading the view topic screen can be
  done just once initially, and many comments can be submitted, rather
  than reloading the view screen after each comment submission.

Version 1.5.0b2:

* Fixed minor rendering bug in the coloured view mode.

Version 1.5.0b1:

* Broke up the system into a number of Perl modules to make future
  work far easier to accomplish.

* Now uses a database for storing Codestriker's data.  This simplifies
  serching and updating of the data, compared to the previous
  filesystem persistance.

* There is now a topic search screen, which displays its results in a
  simple topic list screen.  From here, individual topics can be
  selected for display.

* Topic now has a simple notion of state.  When a topic is created, it
  is in state "Open".  When a review has been done and the code has
  been committed, the author changes the state to "Committed".  If the
  review is not to be committed, but needs to be resubmitted, the
  author moves the topic to state "Closed".  These states are useful
  when displaying lists of topics in the system, to see what is
  currently pending.

* A migration tool is available to automatically transfer <= 1.4.X
  codestriker data into the database.

Version 1.4.5:

* Fixed minor rendering bug with line numbers.

* Fixed minor bug where adding a CC to a comment with more than one
  person on that line failed.

* Support for the handling of binary files in diffs.

* Fix bug in popup parallel coloured-diff mode where the anchor names
  weren't being generated properly, resulting in some browsers not