@@ -16,7 +16,7 @@
 	</p>
 	<p>
 	    The latest version of codestriker can be obtained from
-   <A HREF="http://sourceforge.net/project/showfiles.php?group_id=41136&release_id=94165">here</A>.
+   <A HREF="http://sourceforge.net/project/showfiles.php?group_id=41136&release_id=95617">here</A>.
 	</p>
 	<p>
 	    Codestriker sourceforge project information can be found from
