@@ -9,6 +9,7 @@
 
 package Codestriker::Smtp::SendEmail;
 
+use Sys::Hostname;
 use strict;
 
 use vars qw ( $EMAIL_HR );
@@ -18,8 +19,8 @@ $EMAIL_HR = "--------------------------------------------------------------";
 
 # Send an email with the specified data.  Return false if the mail can't be
 # successfully delivered, true otherwise.
-sub doit($$$$$$$) {
-    my ($type, $from, $to, $cc, $bcc, $subject, $body) = @_;
+sub doit($$$$$$$$$) {
+    my ($type, $new, $topicid, $from, $to, $cc, $bcc, $subject, $body) = @_;
     
     open(MAIL, "| $Codestriker::sendmail -t") || return 0;
 
@@ -27,7 +28,23 @@ sub doit($$$$$$$) {
     print MAIL "To: $to\n";
     print MAIL "Cc: $cc\n" if ($cc ne "");
     print MAIL "Bcc: $bcc\n" if ($bcc ne "");
-    print MAIL "Subject: $subject\n\n";
+
+    # If the message is new, create the appropriate message id, otherwise
+    # construct a message which refers to the original message.  This will
+    # allow for threading, for those email clients which support it.
+    my $message_id = "<Codestriker-" . hostname() . "-${topicid}>";
+
+    if ($new) {
+	print MAIL "Message-Id: $message_id\n";
+    } else {
+	print MAIL "References: $message_id\n";
+	print MAIL "In-Reply-To: $message_id\n";
+    }
+
+    print MAIL "Subject: $subject\n";
+
+    # Insert a blank line for the body.
+    print MAIL "\n";
     print MAIL "$body";
     print MAIL ".\n";
     
